Add move log and the new game button

--- a/chess-ui/src/app/components/board/board.component.html
+++ b/chess-ui/src/app/components/board/board.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <img class="board" src="../../assets/images/board.jpg" alt="chess-board">
-
+    
     <!--------------------------------------------------------------------------------------------------------------->
     
     <img class="indicator" id="a1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -11,7 +11,7 @@
     <img class="indicator" id="f1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h1-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -20,7 +20,7 @@
     <img class="indicator" id="f2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h2-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -29,7 +29,7 @@
     <img class="indicator" id="f3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h3-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -38,7 +38,7 @@
     <img class="indicator" id="f4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h4-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -47,7 +47,7 @@
     <img class="indicator" id="f5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h5-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -56,7 +56,7 @@
     <img class="indicator" id="f6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h6-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -65,7 +65,7 @@
     <img class="indicator" id="f7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h7-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="a8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
@@ -74,9 +74,9 @@
     <img class="indicator" id="f8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h8-capture-ind" src="../../assets/images/capture_ind.png" alt="valid_moves_ind">
-
+    
     <!--------------------------------------------------------------------------------------------------------------->
-
+    
     <img id="a2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
     <img id="b2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
     <img id="c2-pawn" src="../../assets/images/white_pawn.png" alt="pawn">
@@ -109,9 +109,9 @@
     <img id="f8-bishop" src="../../assets/images/black_bishop.png" alt="bishop">
     <img id="black-queen" src="../../assets/images/black_queen.png" alt="queen">
     <img id="black-king" src="../../assets/images/black_king.png" alt="king">
-
+    
     <!--------------------------------------------------------------------------------------------------------------->
-
+    
     <img class="indicator" id="a1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="a2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="a3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -120,7 +120,7 @@
     <img class="indicator" id="a6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="a7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="a8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="b1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -129,7 +129,7 @@
     <img class="indicator" id="b6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="b8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="c1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -138,7 +138,7 @@
     <img class="indicator" id="c6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="c8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="d1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="d2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="d3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -147,7 +147,7 @@
     <img class="indicator" id="d6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="d7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="d8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="e1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="e2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="e3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -156,7 +156,7 @@
     <img class="indicator" id="e6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="e7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="e8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="f1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="f2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="f3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -165,7 +165,7 @@
     <img class="indicator" id="f6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="f7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="f8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="g1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -174,7 +174,7 @@
     <img class="indicator" id="g6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="g8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <img class="indicator" id="h1-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h2-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h3-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
@@ -183,9 +183,9 @@
     <img class="indicator" id="h6-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h7-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
     <img class="indicator" id="h8-ind" src="../../assets/images/valid_moves_ind.png" alt="valid_moves_ind">
-
+    
     <!--------------------------------------------------------------------------------------------------------------->
-
+    
     <div [ngClass]="getPositionClass('a1')" (click)="onSpaceClicked('a1')" id="a1"></div>
     <div [ngClass]="getPositionClass('a2')" (click)="onSpaceClicked('a2')" id="a2"></div>
     <div [ngClass]="getPositionClass('a3')" (click)="onSpaceClicked('a3')" id="a3"></div>
@@ -194,7 +194,7 @@
     <div [ngClass]="getPositionClass('a6')" (click)="onSpaceClicked('a6')" id="a6"></div>
     <div [ngClass]="getPositionClass('a7')" (click)="onSpaceClicked('a7')" id="a7"></div>
     <div [ngClass]="getPositionClass('a8')" (click)="onSpaceClicked('a8')" id="a8"></div>
-
+    
     <div [ngClass]="getPositionClass('b1')" (click)="onSpaceClicked('b1')" id="b1"></div>
     <div [ngClass]="getPositionClass('b2')" (click)="onSpaceClicked('b2')" id="b2"></div>
     <div [ngClass]="getPositionClass('b3')" (click)="onSpaceClicked('b3')" id="b3"></div>
@@ -203,7 +203,7 @@
     <div [ngClass]="getPositionClass('b6')" (click)="onSpaceClicked('b6')" id="b6"></div>
     <div [ngClass]="getPositionClass('b7')" (click)="onSpaceClicked('b7')" id="b7"></div>
     <div [ngClass]="getPositionClass('b8')" (click)="onSpaceClicked('b8')" id="b8"></div>
-
+    
     <div [ngClass]="getPositionClass('c1')" (click)="onSpaceClicked('c1')" id="c1"></div>
     <div [ngClass]="getPositionClass('c2')" (click)="onSpaceClicked('c2')" id="c2"></div>
     <div [ngClass]="getPositionClass('c3')" (click)="onSpaceClicked('c3')" id="c3"></div>
@@ -212,7 +212,7 @@
     <div [ngClass]="getPositionClass('c6')" (click)="onSpaceClicked('c6')" id="c6"></div>
     <div [ngClass]="getPositionClass('c7')" (click)="onSpaceClicked('c7')" id="c7"></div>
     <div [ngClass]="getPositionClass('c8')" (click)="onSpaceClicked('c8')" id="c8"></div>
-
+    
     <div [ngClass]="getPositionClass('d1')" (click)="onSpaceClicked('d1')" id="d1"></div>
     <div [ngClass]="getPositionClass('d2')" (click)="onSpaceClicked('d2')" id="d2"></div>
     <div [ngClass]="getPositionClass('d3')" (click)="onSpaceClicked('d3')" id="d3"></div>
@@ -221,7 +221,7 @@
     <div [ngClass]="getPositionClass('d6')" (click)="onSpaceClicked('d6')" id="d6"></div>
     <div [ngClass]="getPositionClass('d7')" (click)="onSpaceClicked('d7')" id="d7"></div>
     <div [ngClass]="getPositionClass('d8')" (click)="onSpaceClicked('d8')" id="d8"></div>
-
+    
     <div [ngClass]="getPositionClass('e1')" (click)="onSpaceClicked('e1')" id="e1"></div>
     <div [ngClass]="getPositionClass('e2')" (click)="onSpaceClicked('e2')" id="e2"></div>
     <div [ngClass]="getPositionClass('e3')" (click)="onSpaceClicked('e3')" id="e3"></div>
@@ -230,7 +230,7 @@
     <div [ngClass]="getPositionClass('e6')" (click)="onSpaceClicked('e6')" id="e6"></div>
     <div [ngClass]="getPositionClass('e7')" (click)="onSpaceClicked('e7')" id="e7"></div>
     <div [ngClass]="getPositionClass('e8')" (click)="onSpaceClicked('e8')" id="e8"></div>
-
+    
     <div [ngClass]="getPositionClass('f1')" (click)="onSpaceClicked('f1')" id="f1"></div>
     <div [ngClass]="getPositionClass('f2')" (click)="onSpaceClicked('f2')" id="f2"></div>
     <div [ngClass]="getPositionClass('f3')" (click)="onSpaceClicked('f3')" id="f3"></div>
@@ -248,7 +248,7 @@
     <div [ngClass]="getPositionClass('g6')" (click)="onSpaceClicked('g6')" id="g6"></div>
     <div [ngClass]="getPositionClass('g7')" (click)="onSpaceClicked('g7')" id="g7"></div>
     <div [ngClass]="getPositionClass('g8')" (click)="onSpaceClicked('g8')" id="g8"></div>
-
+    
     <div [ngClass]="getPositionClass('h1')" (click)="onSpaceClicked('h1')" id="h1"></div>
     <div [ngClass]="getPositionClass('h2')" (click)="onSpaceClicked('h2')" id="h2"></div>
     <div [ngClass]="getPositionClass('h3')" (click)="onSpaceClicked('h3')" id="h3"></div>
@@ -257,13 +257,19 @@
     <div [ngClass]="getPositionClass('h6')" (click)="onSpaceClicked('h6')" id="h6"></div>
     <div [ngClass]="getPositionClass('h7')" (click)="onSpaceClicked('h7')" id="h7"></div>
     <div [ngClass]="getPositionClass('h8')" (click)="onSpaceClicked('h8')" id="h8"></div>
-
+    
     <!--------------------------------------------------------------------------------------------------------------->
-
+    
     <div id="pawn-promotion-container">
         <img class="piece" id="queen-promotion" (click)="onPromotionPieceClicked('queen')" src="../../assets/images/white_queen.png" alt="queen">
         <img class="piece" id="rook-promotion" (click)="onPromotionPieceClicked('rook')" src="../../assets/images/white_rook.png" alt="rook">
         <img class="piece" id="bishop-promotion" (click)="onPromotionPieceClicked('bishop')" src="../../assets/images/white_bishop.png" alt="bishop">
         <img class="piece" id="knight-promotion" (click)="onPromotionPieceClicked('knight')" src="../../assets/images/white_knight.png" alt="knight">
     </div>
+
+    <div id="new-game-button">
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#new-game-modal">New game</button>
+    </div>
+    <chess-new-game-modal (newGameClicked)="createNewGame()"></chess-new-game-modal>
+    <chess-move-log [moves]="game.moves"></chess-move-log>
 </div>
