--- a/chess-ui/src/app/components/board/board.component.css
+++ b/chess-ui/src/app/components/board/board.component.css
@@ -1,4 +1,5 @@
 .container {
+  margin-top: 60px;
   position: relative;
   top: 0;
   left: 0;
@@ -1950,4 +1951,10 @@
   top: 102px;
   left: 102px;
   max-width: 47%;
+}
+
+#new-game-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
